feat: added campaigns methods
